setup project with tailwind

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
     "indent": "off",
     "semi": ["error", "always"],
     "prettier/prettier": "error",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
