--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "tabWidth": 2,
   "trailingComma": "none",
   "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false
 }
